--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,6 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+/Logs
+*.log
+*.dwlt
