--- a/UserSettings/Search.settings
+++ b/UserSettings/Search.settings
@@ -7,7 +7,7 @@ onBoardingDoNotAskAgain = true
 showPackageIndexes = false
 showStatusBar = false
 scopes = {
-	"last_search.DA949528" = "history"
+	"last_search.DA949528" = "pip"
 	"OpenInspectorPreview.DA949528" = "0"
 	"currentGroup.DA949528" = "menu"
 }
@@ -56,6 +56,7 @@ providers = {
 objectSelectors = {
 }
 recentSearches = [
+	"p"
 ]
 searchItemFavorites = [
 ]
